[package]
name = "dtrack"
version = "0.0.0"
edition = "2021"
description = "DependencyTrack in the CI"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
