[package]
name = "dtrack"
version = "1.0.0"
edition = "2021"
description = "Dependency-Track in the CI"
license = "MIT"
repository = "https://github.com/cnsino/dtrack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json","multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
